--- a/admin/view/template/extension/module/html.twig
+++ b/admin/view/template/extension/module/html.twig
@@ -53,7 +53,7 @@
                 <div class="form-group">
                   <label class="col-sm-2 control-label" for="input-description{{ language.language_id }}">{{ entry_description }}</label>
                   <div class="col-sm-10">
-                    <textarea name="module_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" id="input-description{{ language.language_id }}" data-toggle="summernote" class="form-control">{{ module_description[language.language_id] ? module_description[language.language_id].description }}</textarea>
+                    <textarea name="module_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" id="input-description{{ language.language_id }}" class="form-control">{{ module_description[language.language_id] ? module_description[language.language_id].description }}</textarea>
                   </div>
                 </div>
               </div>
@@ -79,16 +79,52 @@
     </div>
   </div>
   <link href="view/javascript/codemirror/lib/codemirror.css" rel="stylesheet" />
+  <link href="view/javascript/codemirror/lib/fullscreen.css" rel="stylesheet" />
   <link href="view/javascript/codemirror/theme/monokai.css" rel="stylesheet" />
   <script type="text/javascript" src="view/javascript/codemirror/lib/codemirror.js"></script>
   <script type="text/javascript" src="view/javascript/codemirror/lib/xml.js"></script>
+  <script type="text/javascript" src="view/javascript/codemirror/lib/fullscreen.js"></script>
   <script type="text/javascript" src="view/javascript/codemirror/lib/formatting.js"></script>
 
-  <script type="text/javascript" src="view/javascript/summernote/summernote.js"></script>
-  <link href="view/javascript/summernote/summernote.css" rel="stylesheet" />
-  <script type="text/javascript" src="view/javascript/summernote/summernote-image-attributes.js"></script>
-  <script type="text/javascript" src="view/javascript/summernote/opencart.js"></script>
-  <script type="text/javascript"><!--
-$('#language a:first').tab('show');
-//--></script></div>
+  <script type="text/javascript">
+  $('#language a:first').tab('show');
+  
+  $(document).ready(function() {
+    $('#language a:first').tab('show');
+
+    {% for language in languages %}
+    let editor{{ language.language_id }} = CodeMirror.fromTextArea(document.getElementById('input-description{{ language.language_id }}'), {
+      mode: 'text/html',
+      htmlMode: true,
+      lineNumbers: true,
+      theme: 'monokai',
+      fullScreen: false,
+      autoCloseTags: true,
+      matchTags: { bothTags: true },
+      indentUnit: 2,
+      tabSize: 2
+    });
+
+    let fullscreen{{ language.language_id }} = document.createElement("button");
+    fullscreen{{ language.language_id }}.innerHTML = '<i class="fa fa-arrows-alt" aria-hidden="true"></i>';
+    fullscreen{{ language.language_id }}.style.position = 'absolute';
+    fullscreen{{ language.language_id }}.style.top = '5px';
+    fullscreen{{ language.language_id }}.style.right = '5px';
+    fullscreen{{ language.language_id }}.style.zIndex = '10';
+    fullscreen{{ language.language_id }}.style.cursor = 'pointer';
+
+    // Event listener для переключения fullscreen
+    fullscreen{{ language.language_id }}.addEventListener("click", function(e) {
+      e.preventDefault();
+      editor{{ language.language_id }}.setOption("fullScreen", !editor{{ language.language_id }}.getOption("fullScreen"));
+    });
+
+    // Добавление кнопки к wrapper редактора
+    editor{{ language.language_id }}.getWrapperElement().appendChild(fullscreen{{ language.language_id }});
+    
+
+    {% endfor %}
+  });
+  </script>
+</div>
 {{ footer }}
